--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,15 @@
     <scope>test</scope>
 </dependency>
   
+  
+<!-- https://mvnrepository.com/artifact/com.github.scribejava/scribejava-apis -->
+<dependency>
+    <groupId>com.github.scribejava</groupId>
+    <artifactId>scribejava-apis</artifactId>
+    <version>2.5.3</version>
+</dependency>
+
+  
   <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
