--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   
   
 <!-- https://mvnrepository.com/artifact/com.github.scribejava/scribejava-apis -->
+     <!-- Reqiuired for oauth authentication -->
 <dependency>
     <groupId>com.github.scribejava</groupId>
     <artifactId>scribejava-apis</artifactId>
